Add MP4A support for macOS with minimp4 and AVFoundation/Swift (#805)
* Add MP4A support for macOS with minimp4 and AVFoundation

This PR add initial mp4a support for macOS with minimp4
for container parsing and macOS's native AVFoundation in swift
for decoding.

The swift code for calling AVFoundation is exported as __cdecl
so that it could be used by C++/C.

This only works on macOS.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust Bazel BUILD file to allow windows and linux skip.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Properly close resources for MP3/MP4

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix a MP3 divide by zero issue, also prefix AAC buffer with ADTS, so that it could be parsed by FFmpeg

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use FFmpeg on Linux

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to skip mp4 on Ubuntu 16.04

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -185,27 +185,44 @@ cc_library(
     alwayslink = 1,
 )
 
+exports_files([
+    "swift/audio.swift",
+])
+
 cc_library(
     name = "audio_ops",
     srcs = [
+        "kernels/audio_flac_kernels.cc",
         "kernels/audio_kernels.cc",
+        "kernels/audio_kernels.h",
+        "kernels/audio_mp3_kernels.cc",
+        "kernels/audio_mp4_kernels.cc",
+        "kernels/audio_ogg_kernels.cc",
+        "kernels/audio_wav_kernels.cc",
         "ops/audio_ops.cc",
     ],
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
-        "//tensorflow_io/core:dataset_ops",
         "@flac",
         "@minimp3",
         "@speexdsp",
+        "@minimp4",
         "@vorbis",
-    ],
+        "//tensorflow_io/core:dataset_ops",
+    ] + select({
+        "@bazel_tools//src/conditions:darwin": [
+            "//tools/build/swift:audio_swift",
+        ],
+        "//conditions:default": [],
+    }),
     alwayslink = 1,
 )
 
 cc_library(
     name = "ffmpeg_3.4_ops",
     srcs = [
+        "kernels/audio_ffmpeg_kernels.cc",
         "kernels/ffmpeg_kernels.cc",
         "kernels/ffmpeg_kernels_deprecated.cc",
         "ops/ffmpeg_ops.cc",
