Add a tutorial to create tf.data.Dataset from PostgreSQL database (#772)
* Add a tutorial to create tf.data.Dataset from PostgreSQL database

This PR adds a tutorial to create tf.data.Dataset from PostgreSQL database

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Replace tensorflow-io-nightly with tensorflow-io in postgresql docs

Since it is already in 0.12.0 release.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Udpate with `sudo apt-get -y -qq update`

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -24,3 +24,5 @@ toc:
   path: /io/tutorials/prometheus
 - title: "Genomics IO"
   path: /io/tutorials/genome
+- title: "PostgreSQL database"
+  path: /io/tutorials/postgresql
