Allows check/lint individual files with `bazel run //tools/lint:check -- clang -- file.cc` (#837)
* Allows check/lint individual files with `bazel run //tools/lint:check -- clang -- file.cc`

This PR update out lint tool so that it is possible to run:
`bazel run //tools/lint:check -- clang -- file.cc`

to check specific file.cc, and run:

`bazel run //tools/lint:lint -- clang -- file.cc`

to reformat specific file.cc.

In addition, this PR also adds support for black so that

`bazel run //tools/lint:lint -- black -- tensorflow_io/python/core/ops/version_ops.py` (for lint)

`bazel run //tools/lint:check -- black -- tensorflow_io/python/core/ops/version_ops.py` (for check)

could be used similiarly.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Format tensorflow_io/core/python/ops/version_ops.py with black.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix setup.py

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tools/lint/BUILD
+++ b/tools/lint/BUILD
@@ -16,6 +16,26 @@ lint(
 exports_files(["lint.tpl"])
 
 py_binary(
+    name = "black_py",
+    srcs = ["black_python.py"],
+    main = "black_python.py",
+    deps = [
+        requirement("black"),
+    ],
+)
+
+genrule(
+    name = "black",
+    srcs = [],
+    outs = ["black"],
+    cmd = "echo '$(location :black_py) \"$$@\"' > $@",
+    executable = True,
+    tools = [
+        ":black_py",
+    ],
+)
+
+py_binary(
     name = "pylint_py",
     srcs = ["pylint_python.py"],
     main = "pylint_python.py",
