Add JPEG 2000 support for DICOM (#835)
This PR adds JPEG 2000 support for DICOM, based on
DraconPern/fmjpeg2koj library

This PR is part of 809

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -174,8 +174,8 @@ cc_library(
     deps = [
         "//tensorflow_io/core:dataset_ops",
         "//third_party:font",
-        "@dcmtk",
         "@easyexif",
+        "@fmjpeg2koj",
         "@freetype",
         "@libtiff",
         "@libwebp",
