Add lint option for pyupgrade (#843)
* Add lint option for pyupgrade

Now it is possible to run lint auto format with:
```
bazel run //tools/lint:lint -- pyupgrade -- file.py
```

and run lint check with:
```
bazel run //tools/lint:check -- pyupgrade -- file.py
```

Or full check for every python file
```
bazel run //tools/lint:check -- pyupgrade
```

This PR is part of 824

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update README.md to include black and pyupgrade

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Pyupgrade  tensorflow_io/core/python/experimental/serialization_ops.py

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tools/lint/BUILD
+++ b/tools/lint/BUILD
@@ -16,6 +16,27 @@ lint(
 exports_files(["lint.tpl"])
 
 py_binary(
+    name = "pyupgrade_py",
+    srcs = ["pyupgrade_python.py"],
+    main = "pyupgrade_python.py",
+    deps = [
+        requirement("pyupgrade"),
+        requirement("tokenize-rt"),
+    ],
+)
+
+genrule(
+    name = "pyupgrade",
+    srcs = [],
+    outs = ["pyupgrade"],
+    cmd = "echo '$(location :pyupgrade_py) \"$$@\"' > $@",
+    executable = True,
+    tools = [
+        ":pyupgrade_py",
+    ],
+)
+
+py_binary(
     name = "black_py",
     srcs = ["black_python.py"],
     main = "black_python.py",
