Enable black tests on tensorflow_io/core/python/api only (#854)
* Enable black tests on tensorflow_io/core/python/api only

This PR enables black tests on tensorflow_io/core/python/api only.

One issue with black and pylint is that black by default needs 4 spaces
while the pylint we take (from Google style) takes 2 spaces.

This PR does not touch the 4 spaces vs 2 spaces issue.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Disable failing tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tools/lint/BUILD
+++ b/tools/lint/BUILD
@@ -42,6 +42,12 @@ py_binary(
     main = "black_python.py",
     deps = [
         requirement("black"),
+        requirement("regex"),
+        requirement("appdirs"),
+        requirement("click"),
+        requirement("toml"),
+        requirement("typed_ast"),
+        requirement("pathspec"),
     ],
 )
 
