--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -189,12 +189,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04]
-        python: ['3.5', '3.6', '3.7']
+        python: ['3.5', '3.6', '3.7', '3.8']
         exclude:
           - os: ubuntu-16.04
             python: '3.6'
           - os: ubuntu-16.04
             python: '3.7'
+          - os: ubuntu-16.04
+            python: '3.8'
           - os: ubuntu-18.04
             python: '3.5'
     steps:
@@ -274,7 +276,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: ['3.5', '3.6', '3.7']
+        python: ['3.5', '3.6', '3.7', '3.8']
     steps:
       - uses: actions/checkout@v1
       - uses: actions/download-artifact@v1
@@ -358,6 +360,10 @@ jobs:
           path: Linux-3.7-wheel
       - uses: actions/download-artifact@v1
         with:
+          name: Linux-3.8-wheel
+          path: Linux-3.8-wheel
+      - uses: actions/download-artifact@v1
+        with:
           name: Windows-3.5-wheel
           path: Windows-3.5-wheel
       - uses: actions/download-artifact@v1
@@ -368,6 +374,10 @@ jobs:
         with:
           name: Windows-3.7-wheel
           path: Windows-3.7-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.8-wheel
+          path: Windows-3.8-wheel
       - run: |
           set -e -x
           mkdir -p wheelhouse
@@ -377,9 +387,11 @@ jobs:
           cp Linux-3.5-wheel/*.whl wheelhouse/
           cp Linux-3.6-wheel/*.whl wheelhouse/
           cp Linux-3.7-wheel/*.whl wheelhouse/
+          cp Linux-3.8-wheel/*.whl wheelhouse/
           cp Windows-3.5-wheel/*.whl wheelhouse/
           cp Windows-3.6-wheel/*.whl wheelhouse/
           cp Windows-3.7-wheel/*.whl wheelhouse/
+          cp Windows-3.8-wheel/*.whl wheelhouse/
           ls -la wheelhouse/
           sha256sum wheelhouse/*.whl
       - uses: actions/upload-artifact@v1
@@ -452,12 +464,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04]
-        python: ['3.5', '3.6', '3.7']
+        python: ['3.5', '3.6', '3.7', '3.8']
         exclude:
           - os: ubuntu-16.04
             python: '3.6'
           - os: ubuntu-16.04
             python: '3.7'
+          - os: ubuntu-16.04
+            python: '3.8'
           - os: ubuntu-18.04
             python: '3.5'
     steps:
@@ -557,6 +571,10 @@ jobs:
           path: Linux-3.7-nightly
       - uses: actions/download-artifact@v1
         with:
+          name: Linux-3.8-nightly
+          path: Linux-3.8-nightly
+      - uses: actions/download-artifact@v1
+        with:
           name: Windows-3.5-nightly
           path: Windows-3.5-nightly
       - uses: actions/download-artifact@v1
@@ -567,6 +585,10 @@ jobs:
         with:
           name: Windows-3.7-nightly
           path: Windows-3.7-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.8-nightly
+          path: Windows-3.8-nightly
       - run: |
           set -e -x
           mkdir -p dist
@@ -576,9 +598,11 @@ jobs:
           cp Linux-3.5-nightly/*.whl dist/
           cp Linux-3.6-nightly/*.whl dist/
           cp Linux-3.7-nightly/*.whl dist/
+          cp Linux-3.8-nightly/*.whl dist/
           cp Windows-3.5-nightly/*.whl dist/
           cp Windows-3.6-nightly/*.whl dist/
           cp Windows-3.7-nightly/*.whl dist/
+          cp Windows-3.8-nightly/*.whl dist/
           ls -la dist/
           sha256sum dist/*.whl
       - uses: pypa/gh-action-pypi-publish@master
