Change decode_ogg to decode_vorbis and partition lookup helper (#872)
* Add PartitionsLookup function to help locate partitions

and s24 and u8 support for wav and flac

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Change decode_ogg to decode_vorbis

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix build error

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Expose tfio.experimental.audio.AudioIOTensor and tfio.experimental.audio.AudioIODataset

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -511,7 +511,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: ['3.5', '3.6', '3.7']
+        python: ['3.5', '3.6', '3.7', 3.8]
     steps:
       - uses: actions/download-artifact@v1
         with:
