--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -177,6 +177,7 @@ cc_library(
         "@easyexif",
         "@fmjpeg2koj",
         "@freetype",
+        "@libgeotiff",
         "@libtiff",
         "@libwebp",
         "@openexr",
