--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -277,17 +277,20 @@ cc_library(
 cc_library(
     name = "avro_ops",
     srcs = [
+        "avro/avro_dataset_kernels.cc",
+        "avro/avro_record_dataset_kernels.cc",
+        "avro/parse_avro_kernels.cc",
         "kernels/avro_kernels.cc",
-        "kernels/avro_dataset_kernels.cc",
-        "kernels/avro_record_dataset_kernels.cc",
-        "kernels/parse_avro_kernels.cc",
         "ops/avro_ops.cc",
+    ],
+    hdrs = [
+        "avro/avro_record_dataset_kernels.h",
     ],
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "//tensorflow_io/core/utils/avro:avro_utils",
+        "//tensorflow_io/core/avro/utils:avro_utils",
     ],
     alwayslink = 1,
 )
@@ -569,7 +572,6 @@ cc_binary(
         "//tensorflow_io/core:sql_ops",
         "//tensorflow_io/core:text_ops",
         "//tensorflow_io/ignite:ignite_ops",
-        "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ] + select({
