Add decode_nv12 to allow convert nv12 to rgb (#874)
* Add decode_nv12 to allow convert nv12 to rgb

This PR adds support of decode_nv12 decode_nv12 to allow convert nv12 to rgb.
This is useful for Video Capture and MP4 decoding on macOS, as macOS's
default pixel format is NV12 (hardware-accelerated)

This PR fixes 825

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add decode_yuy2 (YUYV/YUY2/YUYV422) support

This PR adds support of decode_yuy2 to allow convert yuy2 to rgb.
This is useful for Video Capture in Linux (Video4Linux2) as the default
format is YUYV.

This PR fixes #825

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -163,10 +163,12 @@ cc_library(
         "kernels/image_font_kernels.cc",
         "kernels/image_hdr_kernels.cc",
         "kernels/image_jpeg_kernels.cc",
+        "kernels/image_nv12_kernels.cc",
         "kernels/image_openexr_kernels.cc",
         "kernels/image_pnm_kernels.cc",
         "kernels/image_tiff_kernels.cc",
         "kernels/image_webp_kernels.cc",
+        "kernels/image_yuy2_kernels.cc",
         "ops/image_ops.cc",
     ],
     copts = tf_io_copts(),
@@ -180,6 +182,7 @@ cc_library(
         "@libgeotiff",
         "@libtiff",
         "@libwebp",
+        "@libyuv",
         "@openexr",
         "@stb",
     ],
