--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,16 +144,38 @@ jobs:
         with:
           name: ${{ runner.os }}-${{ matrix.python }}-wheel
           path: wheelhouse
+
+  macos-test:
+    name: Test ${{ matrix.python }} macOS
+    needs: macos-wheel
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python: ['3.5', '3.6', '3.7']
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-wheel
+          path: wheelhouse
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python }}
+      - run: |
+          set -x -e
+          python -m pip install -U wheel setuptools
+          python --version
       - name: Setup ${{ matrix.python }} macOS
         run: |
           set -x -e
-          bash -x -e tests/test_kafka/kafka_test.sh start kafka
+          bash -x -e tests/test_kafka/kafka_test.sh
           bash -x -e tests/test_azure/start_azure.sh
-          bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub
+          bash -x -e tests/test_pubsub/pubsub_test.sh
       - name: Install ${{ matrix.python }} macOS
         run: |
           set -x -e
           python --version
+          df -h
           (cd wheelhouse && python -m pip install *.whl)
       - name: Test ${{ matrix.python }} macOS
         run: |
@@ -223,19 +245,43 @@ jobs:
         with:
           name: ${{ runner.os }}-${{ matrix.python }}-wheel
           path: wheelhouse
+
+  linux-test:
+    name: Test ${{ matrix.python }} Linux
+    needs: linux-wheel
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-16.04, ubuntu-18.04]
+        python: ['3.5', '3.6', '3.7', '3.8']
+        exclude:
+          - os: ubuntu-16.04
+            python: '3.6'
+          - os: ubuntu-16.04
+            python: '3.7'
+          - os: ubuntu-16.04
+            python: '3.8'
+          - os: ubuntu-18.04
+            python: '3.5'
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-wheel
+          path: wheelhouse
       - name: Setup Linux
         run: |
           set -x -e
-          bash -x -e tests/test_ignite/start_ignite.sh
-          bash -x -e tests/test_kafka/kafka_test.sh start kafka
-          bash -x -e tests/test_kinesis/kinesis_test.sh start kinesis
-          bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub
+          bash -x -e tests/test_kafka/kafka_test.sh
+          bash -x -e tests/test_kinesis/kinesis_test.sh
+          bash -x -e tests/test_pubsub/pubsub_test.sh
           bash -x -e tests/test_prometheus/prometheus_test.sh start
           bash -x -e tests/test_azure/start_azure.sh
-          bash -x -e tests/test_sql/sql_test.sh start sql
+          bash -x -e tests/test_sql/sql_test.sh
       - name: Test Linux
         run: |
           set -x -e
+          df -h
           docker run -i --rm -v $PWD:/v -w /v --net=host \
             buildpack-deps:$(echo ${{ matrix.os }} | awk -F- '{print $2}') \
             bash -x -e .github/workflows/build.wheel.sh python${{ matrix.python }}
@@ -298,6 +344,23 @@ jobs:
         with:
           name: ${{ runner.os }}-${{ matrix.python }}-wheel
           path: dist
+
+  windows-test:
+    name: Test ${{ matrix.python }} Windows
+    needs: windows-wheel
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python: ['3.5', '3.6', '3.7', '3.8']
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-wheel
+          path: wheel
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python }}
       - uses: actions/setup-node@v1
         with:
           node-version: '8.x'
@@ -311,7 +374,7 @@ jobs:
         run: |
           @echo on
           python --version
-          (cd dist && ls *.whl | xargs python -m pip install)
+          (cd wheel && ls *.whl | xargs python -m pip install)
       - name: Test ${{ matrix.python }} Windows
         shell: cmd
         run: |
@@ -331,7 +394,7 @@ jobs:
   release:
     name: Release
     if: github.event_name == 'push'
-    needs: [lint, linux-wheel, macos-wheel, windows-wheel]
+    needs: [lint, linux-test, macos-test, windows-test]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/download-artifact@v1
