Update documentation to include Ubuntu 20.04 (#887)
* Update documentation to include Ubuntu 20.04

As Ubuntu 20.04 is upcoming, this PR updates docs to includes
Ubuntu 20.04.

This PR also adds a test on Ubuntu 20.04 so that any content on
README.md works correctly.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,21 @@ jobs:
       - uses: actions/checkout@v1
       - run: |
           set -x -e
-          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04" > source.sh
+          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04/20.04" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:18.04 \
+            bash -x -e source.sh
+
+  ubuntu-2004:
+    name: Ubuntu 20.04
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - run: |
+          set -x -e
+          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04/20.04" > source.sh
+          cat source.sh
+          docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:20.04 \
             bash -x -e source.sh
 
   centos-8:
