HDF5 and ResourceOp Fix (#922)
* HDF5 and ResourceOp Fix

This PR tries to address the ResourceOp issue where attriubte is passed
and caused resource fixed at graph compile time.

Related to 898 and several others.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use Input for shared_name

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move Compute to IOResourceKernel

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add Resource Deletion

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use global lock to protect ResourceMgr

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update Global Mutex

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use unordered_map+shared_ptr to replace resourcemgr

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Disable failing tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -337,6 +337,7 @@ cc_library(
     name = "hdf5_ops",
     srcs = [
         "kernels/hdf5_kernels.cc",
+        "kernels/io_kernel.h",
         "ops/hdf5_ops.cc",
     ],
     copts = tf_io_copts(),
