Arrow format support for BigQuery reader (#939)
* Arrow format support for BigQuery reader

* Add Apache License Badge (#941)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update metadata of setup.py (#940)

This PR updates  metadata of setup.py to specify python versions, and enhance
classifiers to align with tensorflow core repo.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fixed MacOS build and updated BQ README

* Change speexdsp download to GitHub (#944)

xiph.org appears to be down so change to GitHub (presumably more stable).

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Downgrade LLVM to 9.0.0 (#938)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Arrow format support for BigQuery reader

* Fixed MacOS build and updated BQ README

Co-authored-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/arrow/BUILD
+++ b/tensorflow_io/arrow/BUILD
@@ -14,8 +14,6 @@ cc_library(
         "kernels/arrow_kernels.cc",
         "kernels/arrow_kernels.h",
         "kernels/arrow_stream_client.h",
-        "kernels/arrow_util.cc",
-        "kernels/arrow_util.h",
         "ops/dataset_ops.cc",
     ] + select({
         "@bazel_tools//src/conditions:windows": [
@@ -25,6 +23,20 @@ cc_library(
             "kernels/arrow_stream_client_unix.cc",
         ],
     }),
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        ":arrow_util",
+        "//tensorflow_io/core:dataset_ops",
+        "@arrow",
+    ],
+    alwayslink = 1,
+)
+
+cc_library(
+    name = "arrow_util",
+    srcs = ["kernels/arrow_util.cc"],
+    hdrs = ["kernels/arrow_util.h"],
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
