Fix build target to osx 10.13 for swift (#953)
This PR fixes 936 where osx 10.14 encountered missing symbols:
```
Symbol not found: _$sSo16CMBlockBufferRefa9CoreMedia01_aB14InitTrampolineACWP
```

The reason was that while we pass `-mmacosx-version-min=10.13` in c++,
the swift was not covered.

This PR passes `-target x86_64-apple-macosx10.13` to swift as well.

This PR fixes 936.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,6 +112,7 @@ jobs:
           python3 tools/build/configure.py
           bazel build \
             ${BAZEL_OPTIMIZATION} \
+            --copt -Wunguarded-availability \
             --copt -mmacosx-version-min=10.13 \
             --linkopt -mmacosx-version-min=10.13 \
             --noshow_progress \
