--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -25,6 +25,21 @@ cc_library(
 )
 
 cc_library(
+    name = "operation_ops",
+    srcs = [
+        "kernels/operation_kernels.cc",
+        "ops/operation_ops.cc",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
+    alwayslink = 1,
+)
+
+cc_library(
     name = "optimization",
     srcs = [
         "kernels/io_optimization.cc",
@@ -586,6 +601,7 @@ cc_binary(
         "//tensorflow_io/core:numpy_ops",
         "//tensorflow_io/core:parquet_ops",
         "//tensorflow_io/core:pcap_ops",
+        "//tensorflow_io/core:operation_ops",
         "//tensorflow_io/core:pubsub_ops",
         "//tensorflow_io/core:serialization_ops",
         "//tensorflow_io/core:sql_ops",
