--- a/tensorflow_io/bigquery/BUILD
+++ b/tensorflow_io/bigquery/BUILD
@@ -61,6 +61,10 @@ cc_library(
         "@arrow",
         "@avro",
         "@com_github_grpc_grpc//:grpc++",
+        "@com_google_absl//absl/algorithm",
+        "@com_google_absl//absl/container:fixed_array",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/types:variant",
         "@com_google_googleapis//google/cloud/bigquery/storage/v1beta1:bigquerystorage_cc_grpc",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
