Add initial JPEG 2000 (jp2) support (#1019)
This PR adds initial JPEG 2000 (jp2) support
tfio.experimental.image.decode_jp2

At the moment only the following has been supported:
- jp2 only, no jpx yet
- channel = 3 or channel = 4
- 8 bit

Will expand to add more support in follow up PRs.

This PR is part of 1017

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -193,6 +193,7 @@ cc_library(
         "kernels/image_dicom_kernels.cc",
         "kernels/image_font_kernels.cc",
         "kernels/image_hdr_kernels.cc",
+        "kernels/image_jpeg2k_kernels.cc",
         "kernels/image_jpeg_kernels.cc",
         "kernels/image_nv12_kernels.cc",
         "kernels/image_openexr_kernels.cc",
@@ -216,6 +217,7 @@ cc_library(
         "@libwebp",
         "@libyuv",
         "@openexr",
+        "@openjpeg",
         "@stb",
     ],
     alwayslink = 1,
