Add a tutorial of Audio Data Preparation and Augmentation (#1021)
* Add a tutorial of Audio Data Preparation and Augmentation

This PR adds a tutorial of `Audio Data Preparation and Augmentation`.

Note at the moment, the installation step is specified as:
```
pip install tensorflow-io-nightly
```

Once the next version of tensorflow-io (v0.14.0) is released,
the documenation will be updated to use `pip install tensorflow-io` instead.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove the TF1.x/2.x compat part, and add audio player widget

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -26,3 +26,5 @@ toc:
   path: /io/tutorials/genome
 - title: "PostgreSQL database"
   path: /io/tutorials/postgresql
+- title: "Audio"
+  path: /io/tutorials/audio
