Add GIF encoding support as tfio.image.encode_gif (#1044)
This PR adds GIF encoding support as tfio.image.encode_gif.
While GIF is not a good fit for high resolution images,
GIF is most useful for storing animated series images.
This PR add encode_gif support so that it is possible to
construct a animated (movie like) gif from a collection of images.

This PR only add input of `[N, H, W, C]` support. Other shapes
such as `[H, W, C]` will be added in follow up PRs.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -192,6 +192,7 @@ cc_library(
         "kernels/image_bmp_kernels.cc",
         "kernels/image_dicom_kernels.cc",
         "kernels/image_font_kernels.cc",
+        "kernels/image_gif_kernels.cc",
         "kernels/image_hdr_kernels.cc",
         "kernels/image_jpeg2k_kernels.cc",
         "kernels/image_jpeg_kernels.cc",
@@ -215,6 +216,7 @@ cc_library(
         "@easyexif",
         "@fmjpeg2koj",
         "@freetype",
+        "@giflib",
         "@libavif",
         "@libgeotiff",
         "@libtiff",
