Add tutorial for colorspace conversions (#1040)
* Add tutorial for colorspace conversions

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use tensorflow_docs.tools.[nbfmt|nblint], and also replace images

This PR uses tensorflow_docs.tools.[nbfmt|nblint] to sanitize the notebook.
The image used has also been replaced as was suggested in review.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -26,5 +26,7 @@ toc:
   path: /io/tutorials/genome
 - title: "PostgreSQL database"
   path: /io/tutorials/postgresql
+- title: "Color Space Conversions"
+  path: /io/tutorials/colorspace
 - title: "Audio"
   path: /io/tutorials/audio
