Rename gstpufs to gsmemcachedfs (#1075)
* moving gstpufs dir to gsmemcachedfs

* Rename gstpu to gsmemcached.

* Change gs TPU fs ref to gs MEMCACHED fs refs.

* Fix lint error, line too long.

* Fix lint error, VLOG format.

* Fix lint error, VLOG format, try 2.

* Fix lint error, gs memcached fs.

* Fix lint error, memcached fs.

* Fix lint error, extra space at end.

* edit

* lint fix to cause lint to run

* lint fix

* lint fix space end of line

--- a/tensorflow_io/core/kernels/gsmemcachedfs/BUILD
+++ b/tensorflow_io/core/kernels/gsmemcachedfs/BUILD
@@ -64,9 +64,9 @@ cc_library(
 )
 
 cc_library(
-    name = "gs_tpu_file_system",
-    srcs = ["gs_tpu_file_system.cc"],
-    hdrs = ["gs_tpu_file_system.h"],
+    name = "gs_memcached_file_system",
+    srcs = ["gs_memcached_file_system.cc"],
+    hdrs = ["gs_memcached_file_system.h"],
     copts = tf_io_copts(),
     linkstatic = 1,  # Needed since alwayslink is broken in bazel b/27630669
     visibility = ["//visibility:public"],
