Kafka tutorial notebook (#1069)
* kafka and zookeeper setup

* added dataset description

* added training and inference steps

* modified model and dataset hyper-params

* removed cell outputs

* fixed docs lint and fmt issues

* refine content structure

* fixed lint issues

* updated _toc.yaml

* updated _toc.yaml

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -30,3 +30,5 @@ toc:
   path: /io/tutorials/colorspace
 - title: "Audio"
   path: /io/tutorials/audio
+- title: "Kafka"
+  path: /io/tutorials/kafka
