added 'import' tests and github actions for docker images (#1090)
* added basic tests and github actions

* removed -i option from docker run during tests

* updated docker test setup for mac and win

* removed win docker test

* modified docker tests on mac

* removed docker tests on macos

* added docker tests on macOS

* removed docker devel test in macos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -213,6 +213,16 @@ jobs:
           set -x -e
           python --version
           bash -x -e .github/workflows/build.wheel.sh python
+      - name: Test docker images on macOS
+        run: |
+          set -x -e
+          mkdir -p ~/.docker/machine/cache
+          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
+          brew install docker docker-machine
+          docker-machine create --driver virtualbox default
+          docker-machine env default
+          eval "$(docker-machine env default)"
+          bash -x -e tools/docker/tests/dockerfile_cpu_test.sh
 
   linux-bazel:
     name: Bazel Linux
@@ -304,6 +314,11 @@ jobs:
           docker run -i --rm -v $PWD:/v -w /v --net=host \
             buildpack-deps:$(echo ${{ matrix.os }} | awk -F- '{print $2}') \
             bash -x -e .github/workflows/build.wheel.sh python${{ matrix.python }}
+      - name: Test docker images on Linux
+        run: |
+          set -x -e
+          bash -x -e tools/docker/tests/dockerfile_cpu_test.sh
+          bash -x -e tools/docker/tests/dockerfile_devel_test.sh
 
   windows-bazel:
     name: Bazel Windows
