Bug fix in github actions while pushing docker images to registry (#1119)
* test docker push to registry

* removed nightly stages

* restored ci actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -497,6 +497,7 @@ jobs:
     needs: [lint, linux-test, macos-test, windows-test]
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
       - run: |
           set -e -x
           docker login --username tfsigio --password ${{ secrets.DOCKER_PASSWORD }}
